# llrp-rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
llrp/: Cargo.toml  build.rs
llrp-codegen/: Cargo.toml  llrp-1x1-def.xml
llrp-codegen/base/: common.rs
llrp-codegen/src/: codegen.rs  lib.rs  llrp_def.rs  repr.rs
llrp-common/: Cargo.toml
llrp-common/src/: lib.rs
llrp-gen/: Cargo.toml
llrp-gen/base/: common.rs  lib.rs
llrp-gen/src/: codegen.rs  llrp_def.rs  main.rs  repr.rs
llrp-message/: Cargo.toml
llrp-message/src/: lib.rs
llrp/src/: binary.rs  deserializer.rs  lib.rs  messages.rs  parameters.rs  tests.rs
