[package]
name = "llrp-codegen"
version = "0.1.0"
authors = ["Michael Chesser <michael.chesser@adelaide.edu.au>"]
edition = "2018"

[dependencies]
heck = "0.3.1"
quote = "1.0.2"
serde = { version = "1.0.101", features = ["derive"] }
serde-xml-rs = {version = "0.3.1", default-features = false }
syn = { version = "1.0.5", default-features = false }
proc-macro2 = "1.0.4"
