[package]
name = "llrp"
version = "0.1.0"
authors = ["Michael Chesser"]
edition = "2018"

[dependencies]
byteorder = "1.3.2"

[build-dependencies]
llrp-codegen = { path = "../llrp-codegen" }
rustfmt-nightly = { git = "https://github.com/rust-lang/rustfmt" }

[dev-dependencies]
pretty_assertions = "0.6.1"
